# whatsapp-mcp-pro

./: .env.example  .gitignore  .hadolint.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.bridge  Dockerfile.mcp  Dockerfile.web-ui  IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  SETUP.md  docker-compose.yaml  entrypoint.sh  store
.claude/: settings.local.json
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: go-test.yml  lint.yml  python-test.yml  security.yml
docker/: Dockerfile.bridge  Dockerfile.mcp
docs/: CODE_QUALITY.md  DATABASE_DESIGN.md  HISTORY_SYNC_RESEARCH.md  METADATA_PHILOSOPHY.md  MIGRATION.md  PHASE1_CHECKLIST.md  PHASE1_METADATA_IMPLEMENTATION.md  PHASE1_METADATA_SUMMARY.md  PHASE1_QUICK_REFERENCE.md  PHASE_1_PLAN.md  PHASE_1_SUMMARY.md  SECURITY_AUDIT.md  TESTING_ROADMAP.md  WEBHOOK.md
scripts/: com.example.whatsapp-bridge.plist  merge-lid-chats.py  run-bridge.sh  wa-backup.sh  wabridge.sh
wa-client/: README.md  app.py
wa-client/static/: index.html
wa-dispatch/: .gitignore  DESIGN-notion-queue.md  INSTALL.md  README.md  config.example.env  install.sh  meet-dispatch.py  prepare-frame.md  routes.example.json  wa-approve.py  wa-dispatch.py  wa_config.py  wa_session.py
wa-dispatch/hooks/: deny.py  inbox-stop-hook.py
wa-dispatch/scripts/: link-vault-contacts.py  mine-comms-profiles.py
whatsapp-bridge/: go.mod  go.sum  main.go  sync_improvements.go  webhooks.yaml.example
whatsapp-bridge/migrations/: 001_add_metadata_fields.sql
whatsapp-bridge/tests/: test-message-integration.sh  test-webhook-api.sh  test-webhook-delivery.sh  test-webhook-extended.sh  test-webhook-update.sh
whatsapp-mcp-server/: .coverage  .gitignore  audio.py  check.py  gradio-main.py  main.py  pyproject.toml  requirements.txt  serve_http.py  whatsapp.py
whatsapp-mcp-server/lib/: __init__.py  bridge.py  database.py  models.py  recall.py  recall.py.bak-20260703  transcribe.py  utils.py
whatsapp-mcp-server/migrations/: 001_add_metadata_fields.sql
whatsapp-mcp-server/tests/: __init__.py  conftest.py  test_bridge.py  test_database.py  test_main_tools.py  test_models.py  test_utils.py  test_whatsapp_list_chats.py
whatsapp-web-ui/: nginx.conf  package-lock.json  package.json
(+51 files in other folders)
