[project]
name = "whatsapp-mcp-server"
version = "0.3.0"
description = "Curated WhatsApp MCP server for chat search, messaging, media, groups, and account actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.0",
    "requests>=2.33.0",
    "python-dotenv>=1.2.2",
    "pygments>=2.20.0",
    "starlette>=1.3.1",
    "uvicorn>=0.23.2",
    "urllib3>=2.6.3",
    "h11>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.24.0",
]
# Multilingual semantic search over message history via sentence-transformers.
# Heavy install (~470 MB of model weights cached lazily at ~/.cache/huggingface
# on first use), so kept behind an opt-in extra.
recall = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line too long - handled by formatter

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
